fix scrollbar css
scrollbar was trying to use variables defined in the `html` selector which were declaring variables using variables from the layout which were out of scope, by cutting the middle man everything is in scope

--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -1,26 +1,16 @@
 /* https://css-tricks.com/the-current-state-of-styling-scrollbars/ */
 
-html {
-	/* --scrollbarBG: transparent; */
-	--thumbBG: rgb(var(--base-500));
-	--scrollbarBG: rgb(var(--base-100));
-}
-.dark {
-	--scrollbarBG: rgb(var(--base-500));
-	--thumbBG: rgb(var(--base-300));
-}
 *::-webkit-scrollbar {
 	width: 1rem;
 }
 * {
 	scrollbar-width: thin;
-	scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+	scrollbar-color: rgb(var(--base-500)) rgb(var(--base-300));
 }
 *::-webkit-scrollbar-track {
-	background: var(--scrollbarBG);
+	background: rgb(var(--base-300));
 }
 *::-webkit-scrollbar-thumb {
-	background-color: var(--thumbBG);
-	/* border-radius: 0.5rem; */
-	border: 0.25rem solid var(--scrollbarBG);
+	background-color: rgb(var(--base-500));
+	border: 0.25rem solid rgb(var(--base-300));
 }
